<resources>
    <string name="app_name">DevWiki</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="blog_short_label">Blog</string>
    <string name="blog_long_label">打开Blog</string>
    <string name="github_short_label">GitHub</string>
    <string name="github_long_label">打开GitHub</string>

    <string name="action_settings">设置</string>
    <string name="nav_ui">UI界面</string>
    <string name="nav_service">后台服务</string>
    <string name="nav_data">数据存储</string>
    <string name="nav_network">网络访问</string>
    <string name="nav_media">多媒体</string>
    <string name="nav_device">硬件设备</string>
    <string name="blog_address">http://blog.devwiki.net</string>
    <string name="nav_share">分享</string>
    <string name="nav_send">发送</string>

    <string name="btn_ok">确认</string>
    <string name="btn_cancel">取消</string>
    <string name="btn_return">返回</string>
    <string name="btn_next">下一步</string>
    <string name="btn_previous">上一步</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- UI界面 -->
    <string name="title_activity_bottom_nav">BottomNavActivity</string>
    <string name="view_text_view">TextView</string>
    <string name="view_edit_text">EditText</string>
    <string name="view_list_view">ListView</string>
    <string name="view_recycler_view">RecyclerView</string>
    <string name="view_bottom_nav">BottomNavigationView</string>
    <string name="view_badge_icon">BadgeIcon</string>
    <string name="title_activity_text_view">TextViewActivity</string>
    <string name="title_activity_edit_text">EditTextActivity</string>
    <string name="drawable_text_view">DrawableTextView</string>
    <string name="normal_text_view">NormalTextView</string>
    <string name="html_text_view">HtmlTextView</string>

    <!-- EditText -->
    <string name="please_input_name">请输入名称</string>
    <string name="please_input_password">请输入密码</string>
    <string name="one_input_btn">单个输入框(按钮上移)</string>
    <string name="one_input_all_btn">单个输入框(整体上移)</string>
    <string name="one_input_all2_btn">单个输入框(整体上移2)</string>
    <string name="two_input_btn">两个输入框(按钮上移)</string>
    <string name="two_input2_btn">两个输入框(不上移)</string>
    <string name="two_input_all_btn">两个输入框(整体上移)</string>
    <string name="standard">Standard</string>
    <string name="single_task">SingleTask</string>
    <string name="single_top">SingleTop</string>
    <string name="single_instance">SingleInstance</string>
    <string name="activity">Activity</string>
    <string name="fps_1">1FPS</string>
    <string name="fps_2">2FPS</string>
    <string name="fps_3">3.3FPS</string>
    <string name="fps_5">5FPS</string>
    <string name="fps_10">10FPS</string>
    <string name="fps_20">20FPS</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="animation">Animation</string>
    <string name="water_wave">波纹</string>
    <string name="microphone">麦克风</string>
    <string name="rx_java">RxJava</string>
    <string name="sub_cancel">SubCancel</string>
    <string name="obs_cancel">ObsCancel</string>
    <string name="complete">Complete</string>
</resources>
