<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_ui"
            android:icon="@drawable/ic_menu_ui"
            android:title="@string/nav_ui"/>
        <item
            android:id="@+id/nav_service"
            android:icon="@drawable/ic_menu_service"
            android:title="@string/nav_service"/>
        <item
            android:id="@+id/nav_data"
            android:icon="@drawable/ic_menu_data"
            android:title="@string/nav_data"/>
        <item
            android:id="@+id/nav_network"
            android:icon="@drawable/ic_menu_network"
            android:title="@string/nav_network"/>
        <item
            android:id="@+id/nav_media"
            android:icon="@drawable/ic_menu_media"
            android:title="@string/nav_media"/>
        <item
            android:id="@+id/nav_device"
            android:icon="@drawable/ic_menu_device"
            android:title="@string/nav_device"/>
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/nav_share"/>
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/nav_send"/>
        </menu>
    </item>
</menu>
