<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/bottom_nav_ui"
          android:enabled="true"
          app:showAsAction="ifRoom"
          android:title="@string/nav_ui"
          android:icon="@drawable/ic_menu_ui"/>

    <item android:id="@+id/bottom_nav_data"
          android:enabled="true"
          app:showAsAction="ifRoom"
          android:title="@string/nav_data"
          android:icon="@drawable/ic_menu_data"/>

    <item android:id="@+id/bottom_nav_service"
          android:enabled="true"
          app:showAsAction="ifRoom"
          android:title="@string/nav_service"
          android:icon="@drawable/ic_menu_service"/>

    <item android:id="@+id/bottom_nav_net"
          android:enabled="true"
          app:showAsAction="ifRoom"
          android:title="@string/nav_network"
          android:icon="@drawable/ic_menu_network"/>

    <item android:id="@+id/bottom_nav_media"
          android:enabled="true"
          app:showAsAction="ifRoom"
          android:title="@string/nav_media"
          android:icon="@drawable/ic_menu_media"/>

</menu>