<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#000000"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="48dp"
        android:gravity="center"
        android:orientation="vertical">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/fps_1_btn"
            style="@style/style_normal_button"
            android:background="#000000"
            android:textColor="#FFFFFF"
            android:text="@string/fps_1"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/fps_2_btn"
            style="@style/style_normal_button"
            android:background="#000000"
            android:textColor="#FFFFFF"
            android:text="@string/fps_2"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/fps_3_btn"
            style="@style/style_normal_button"
            android:background="#000000"
            android:textColor="#FFFFFF"
            android:text="@string/fps_3"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/fps_5_btn"
            style="@style/style_normal_button"
            android:background="#000000"
            android:textColor="#FFFFFF"
            android:text="@string/fps_5"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/fps_10_btn"
            style="@style/style_normal_button"
            android:background="#000000"
            android:textColor="#FFFFFF"
            android:text="@string/fps_10"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/fps_20_btn"
            style="@style/style_normal_button"
            android:background="#000000"
            android:textColor="#FFFFFF"
            android:text="@string/fps_20"/>

    </LinearLayout>
</ScrollView>