<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/standard_btn"
            style="@style/style_normal_button"
            android:text="@string/standard"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/task_btn"
            style="@style/style_normal_button"
            android:text="@string/single_task"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/top_btn"
            style="@style/style_normal_button"
            android:text="@string/single_top"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/instance_btn"
            style="@style/style_normal_button"
            android:text="@string/single_instance"/>

    </LinearLayout>
</ScrollView>
