<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="net.devwiki.devwiki.ui.UIFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/text_btn"
            android:text="@string/view_text_view"
            style="@style/button_item_style"/>

        <Button
            android:id="@+id/edit_btn"
            android:text="@string/view_edit_text"
            style="@style/button_item_style"/>

        <Button
            android:id="@+id/recycler_btn"
            android:text="@string/view_recycler_view"
            style="@style/button_item_style"/>
    </LinearLayout>
</ScrollView>
